--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <textarea name="user-comment" placeholder="Text input" class="text-area" id="user-comment"></textarea>
             </div>
             <div class="check-box">
-                <input class="visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
+                <input class="inputvh visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
                 <label for="user-privacy" class="privacy"><span class="span-privacy">
                 <svg class="privacy-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-Checkbox"></use>
