--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         <input class="call-to-send" name="call-to-input" type="email" placeholder="E-mail">
                     </label>
                     <button class="button-form-type" type="submit">Subscribe
-                        <svg class="button-form" width="24" height="24">
+                        <svg class="button-forms" width="24" height="24">
                             <use href="./images/icons.svg#icon-Frame-3"></use>
                         </svg>
                     </button>
@@ -434,7 +434,7 @@
                 <textarea name="user-comment" placeholder="Text input" class="text-area" id="user-comment"></textarea>
             </div>
             <div class="check-box">
-                <input class="inputpp visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
+                <input class="inputpp visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy" checked>
                 <label for="user-privacy" class="privacy"><span class="span-privacy">
                 <svg class="privacy-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-Checkbox"></use>
