--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="fon-main-head">
             <div class="container">
             <h1 class="main-head-name">Effective Solutions for Your Business</h1>
-            <button type="button" class="button">Order Service</button>
+            <button type="button" class="button">s Service</button>
             </div>
         </section>
         <section class="benefits-container-box">
