--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <input class="inputpp visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
                 <label for="user-privacy" class="privacy"><span class="span-privacy">
                 <svg class="privacy-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-Checkbox"></use>
+                    <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
             </span>I accept the terms and conditions of the<a class="policy-file" href="" target="_blank">Privacy Policy</a></label>
             </div>
